fix: gap and width projects

--- a/style.css
+++ b/style.css
@@ -154,15 +154,11 @@ main.main {
   flex-direction: column;
   max-width: 1366px;
   height: auto;
-  margin: 0px auto;
 }
 
 .wrapper-main-one {
   display: flex;
   flex-wrap: nowrap;
-  max-width: 1366px;
-  height: auto;
-  margin: 0px auto;
   color: #271a1a;
   background: rgb(255, 255, 255);
   background: linear-gradient(
@@ -175,9 +171,7 @@ main.main {
 .wrapper-main-two {
   display: flex;
   flex-direction: column;
-  max-width: 1366px;
-  height: auto;
-  margin: 0px auto;
+  padding-top: 10px;
   background: rgb(255, 255, 255);
   background: linear-gradient(
     180deg,
@@ -242,22 +236,17 @@ main.main {
   position: relative;
   top: 50px;
 }
-#projects {
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-}
+
 .container-projects {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 40px;
-  margin: 14px 0;
-  padding-bottom: 30px;
+  justify-content: space-around;
+  row-gap: 20px;
+  margin: 38px 0;
 }
 .container-projects figure {
   box-sizing: border-box;
-  width: 40%;
+  width: 25%;
   text-align: center;
   background: linear-gradient(
     0deg,
@@ -304,4 +293,8 @@ main.main {
 .footer .footer-img .img-rs {
   width: 120px;
   height: 80px;
+  transition: 0.3s;
+}
+.footer .footer-img .img-rs:hover {
+  transform: scale(1.1);
 }
